<?xml version="1.0"?>
<package> <name>hiwr_tired</name> <version>0.0.0</version> <description>The hiwr tired package</description>

 <maintainer email="lucile.peuch@worldline.com">lpeuch</maintainer>

 <license>Apache V2</license>

<!-- <test_depend>gtest</test_depend> -->
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>controller</build_depend>
 <build_depend>nodelet</build_depend>
 <build_depend>opencv</build_depend>

 <run_depend>nodelet</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>controller</run_depend>
 <run_depend>opencv</run_depend>
<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- You can specify that this package is a metapackage here: -->
<!-- <metapackage/> -->
    <nodelet plugin="${prefix}/hiwr-tired-nodelet.xml"/>
<!-- Other tools can request additional information be placed here -->
 </export> </package>
